# SerialPP

./: CMakeLists.txt
serial/: bufferedreader.cpp  bufferedreader.h  device.h  settings.h
serial/nix/: device.cpp  device.h
serial/windows/: device.cpp  device.h
